Ignore dropdown changes to default message and fix z-index for nav

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -7,7 +7,7 @@ header {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 100;
+  z-index: 999999;
   height: 70px;
 
   .logo {
